css adjusted to fix feed filter bar shifting

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -25,7 +25,6 @@ body {
   display: flex;
   flex: 1 0 auto;
   justify-content: center;
-  align-items: center;
   min-width: auto;
 }
 
@@ -182,9 +181,7 @@ body {
 }
 
 .loginContainer {
-
-  align-items: center;
-  justify-content: center;
+  margin: auto;
 }
 
 .loginContainer form {
